work with article